@startuml

title __SRC's Class Diagram__\n


    class Calculator {
        ~ Operand1 : String
        ~ Operand2 : String
        ~ db1 : double
        ~ db2 : double
        ~ firstInstance : Boolean
        ~ input : String
        ~ int1 : int
        ~ int2 : int
        ~ isDeletable : Boolean
        ~ nInstance : Boolean
        ~ object : GObject
        ~ opBuffer : char
        ~ performOperator : Boolean
        ~ secondInstance : Boolean
        ~ wasEquals : Boolean
        ~ wasNumber : Boolean
        ~ wasOperator : Boolean
        + mouseClicked()
        + operate()
        + operate()
        + run()
        - initBooleans()
        {static} - isNumeric()
        - processButton()
    }

  


    class CalculatorLayout {
        {static} - MAIN_FONT : String
        {static} - MARGIN : int
        {static} - MEMO_FONT : String
        {static} - NCOLS : int
        {static} - NROWS : int
        {static} - labels : char[]
        - mainDisplay : GLabel
        - memoBuffer : StringBuilder
        - memoDisplay : GLabel
        - numBuffer : StringBuilder
        + CalculatorLayout()
        + clearMainDisplay()
        + clearMemoBuffer()
        + clearMemoDisplay()
        + clearMemoElement()
        + clearNumBuffer()
        + delOneMain()
        + delOneMemo()
        + deleteOneCharacter()
        + getMainDisplay()
        + negateElement()
        + setMainDisplay()
        + setMainDisplay()
        + setMemoDisplay()
        + setMemoDisplay()
    }

  


    class MathHandler {
        {static} + add()
        {static} + add()
        {static} + divide()
        {static} + divide()
        {static} + multiply()
        {static} + multiply()
        {static} + subtract()
        {static} + subtract()
    }

  


    class MyButton {
        {static} - FONT : String
        - key : GRect
        - keyText : GLabel
        + MyButton()
        + getText()
        + setText()
        - getCenterX()
        - getCenterY()
    }

  

  Calculator -up-|> acm.program.GraphicsProgram
  Calculator o-- CalculatorLayout : calc
  CalculatorLayout -up-|> acm.graphics.GCompound
  MyButton -up-|> acm.graphics.GCompound


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
